--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,6 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-
 development:
   <<: *default
   database: classified_db
@@ -20,4 +19,7 @@ production:
   <<: *default
   url: <%= ENV['DATABASE_URL'] %>
 
+cable:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
 
